Add profile image to index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,11 @@
   <body>
     <h1>Hello, world!</h1>
     <p>Your Astro site is now set up.</p>
+
+<img src="/images/bens_profile.jpeg" 
+     alt="Ben Audirsch profile photo"
+     width="250" height="250" />
+
   </body>
 </html>
 
